Add Counting notebook

--- a/KittensAndCats.ipynb
+++ b/KittensAndCats.ipynb
@@ -398,7 +398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To be honest I'm not sure if there is anything actionable to be done at this point. There doesn't seem to be a clear pattern to me regarding the types of images our learner gets incorrect. Some are zoomed in, some have two cats and "
+    "To be honest I'm not sure if there is anything actionable to be done at this point. There doesn't seem to be a clear pattern to me regarding the types of images our learner gets incorrect. Some are zoomed in, some have two cats and one has a dog with text, but no pattern jumps out at me."
    ]
   },
   {
